<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDbcXlcVOSpaOu9JS8IEsD9HlBlyd-w4v4</string>
    <string name="UpdateAppName">Samtam_Citizen</string>
    <string name="ChooseProvinces">انتخاب استان</string>
    <string name="ProvincesSearch">جستجوی استان</string>
    <string name="City_Prompt">انتخاب شهر</string>
    <string name="City_Search">جستجوی شهر</string>
    <string name="ChooseRegion">انتخاب منطقه</string>
    <string name="Region_Search">جستجوی منطقه</string>
    <string name="ChooseUser">انتخاب کاربر</string>
    <string name="User_Search">جستجوی کاربر</string>
    <string name="ChooseBank">انتخاب بانک</string>
    <string name="Bank_Search">جستجوی بانک</string>
    <string name="ChooseRequestType">انتخاب نوع درخواست</string>
    <string name="CitizenScore">امتیازات شهروند</string>
    <string name="PackageNotDelivered">قبل از درخواست جمع آوری، لطفا ابتدا به بخش درخواست پکیج بروید و تا تحویل پکیج در محل ساختمان منتظر بمانید</string>
    <string name="app_name">شهروند</string>
    <string name="WMSFromFist">سیستم مدیریت تفکیک از مبدأ</string>
    <string name="Orders">درخواست ها</string>
    <string name="WalletBag">کیف پول</string>
    <string name="RegisterPerson">ثبت نام</string>
    <string name="RegisterPersonBank">اطلاعات بانکی</string>
    <string name="PostalAddress">ویرایش آدرس پستی</string>
    <string name="RegisterPersonCodeNew">کد نوسازی</string>
    <string name="Name">نام</string>
    <string name="Family">نام خانوادگی</string>
    <string name="Gender">جنسیت</string>
    <string name="Man">مرد</string>
    <string name="Woman">زن</string>
    <string name="MobileNumber">شماره موبایل</string>
    <string name="Password">رمز ورود</string>
    <string name="ReTryPassword">تکرار رمز ورود</string>
    <string name="ReagentCode">موبایل معرف</string>
    <string name="AccountNumber">شماره شبا</string>
    <string name="Save">ثبت</string>
    <string name="RegisterCode">با ثبت کد نوسازی مربوط به بنای خود می توانید از 10٪ تخفیف عوارض شهرداری بهره مند گردید</string>
    <string name="RegisterKM">برای استفاده از تخفیف، میبایست بار تحویلی در هر سال بیشتر از - کیلوگرم باشد</string>
    <string name="SaveInfo">ذخیره اطلاعات</string>
    <string name="HomeMaxScore">بیشترین امتیاز</string>
    <string name="HomeAveScore">میانگین امتیازات</string>
    <string name="HomeYouScore">امتیاز قرعه کشی</string>
    <string name="AmountK">کیلو</string>
    <string name="IntroduceToFriends">معرفی به دوستان و کسب امتیاز</string>
    <string name="IntroduceToFriendsLink">لینک معرفی به دوستان</string>
    <string name="Retry">تلاش مجدد</string>
    <string name="PleaseTryAgain">لطفا تلاش دوباره کنید</string>
    <string name="GR">گرم</string>
    <string name="FailureDeliver">عدم تحویل</string>
    <string name="FragmentPackRequestPrimary">درخواست پکیج</string>
    <string name="FragmentPackRequestPrimarySet">ثبت درخواست</string>
    <string name="FragmentPackRequestPrimarySend">ارسال</string>
    <string name="FragmentPackRequestPrimaryReceive">تحویل</string>
    <string name="WasteUserOrder">میزان سفارشات شما</string>
    <string name="FragmentCollectRequest">درخواست جمع آوری</string>
    <string name="WasteAcceptByOperator">تایید شده سیستم</string>
    <string name="PetBottel">بطری پت</string>
    <string name="AlBottel">قوطی آلومینیوم</string>
    <string name="Dry">مخلوط خشک</string>
    <string name="Paper">کارتن و کاغذ</string>
    <string name="FragmentCollectRequestCar">تحویل به خودرو بازیافت</string>
    <string name="FragmentCollectRequestBooth">تحویل به غرفه بازیافت</string>
    <string name="FragmentSeparation">تفکیک پسماند</string>
    <string name="FragmentLearnSeparation">آموزش تفکیک پسماند</string>
    <string name="FragmentLearnItems">ریز اقلام بازیافتی</string>
    <string name="FragmentPackRequestAddress">ثبت آدرس</string>
    <string name="NextStep">مرحله بعدی</string>
    <string name="KGr">کیلوگرم</string>
    <string name="Choose">انتخاب</string>
    <string name="Edit">ویرایش</string>
    <string name="Cancel">لغو</string>
    <string name="CancelRequest">لغو درخواست</string>
    <string name="CallBooth">تماس با غرفه</string>
    <string name="BoothAuthor">مسئول غرفه</string>
    <string name="ShowOnMap">نمایش مکان</string>
    <string name="TopThree">سه نفر برتر</string>
    <string name="SumScoreOfMonth">جمع امتیازات ماه</string>
    <string name="BestScores">امتیازات برتر</string>
    <string name="ChooseForDelivery">انتخاب برای تحویل</string>
    <string name="TotalScore">امتیاز کل</string>
    <string name="HowGiveScore">نحوه امتیاز دهی</string>
    <string name="Lottery">قرعه کشی</string>
    <string name="YouScore">امتیاز شما</string>
    <string name="Score">امتیاز</string>
    <string name="Scores">امتیازات</string>
    <string name="Winner">برنده ماه قبل</string>
    <string name="Toman">تومان</string>
    <string name="Rial">ریال</string>
    <string name="WalletMoney">مبلغ کیف پول شما : </string>
    <string name="TotalYorBag">مجموع بار خریداری شده از شما</string>
    <string name="ConvertToCash">تبدیل به مبلغ</string>
    <string name="ConvertToScore">تبدیل به امتیاز</string>
    <string name="AboutUs">درباره ما</string>
    <string name="AboutMe">درباره سیستم مدیریت تفکیک از مبدأ</string>
    <string name="AboutMeDescription">بخش چشمگیری از ۵۰ هزار تن زباله ای که در روز تولید میشود را پسماندهای آلی
به خود اختصاص میدهند. متأسفانه سالیانه مقادیر چشمگیری از پسماند شهری
 بدون اینکه مورد پردازش قرار گیرد و مواد ارزشمند قابل بازیافت آن تفکیک شود
 به دفنگاهها منتقل میشود. نتیجه این عمل، چیزی نیست جز تولید آلایندههای
 خطرناک جامد، مایع و گاز که باعث آلودگی آب هوا و خاک میشود که حذف این
 آلایندهها نیز همراه با صرف هزینه بسیار بالایی است. بنابراین این سیستم با هدف
مشارک مستقیم خانوار ها ، این امکان را فراهم نموده تا با جمع آوری پسماند های
 عالی و خشک از درب منازل، گامی بلند در حفظ محیط زیست کشورمان بردارد.</string>
    <string name="CallWithUs">تماس با ما</string>
    <string name="Teacher">آموزشگر</string>
    <string name="Support">پشتیبانی فنی</string>
    <string name="SupportApp">پشتیبانی</string>
    <string name="Subject">موضوع</string>
    <string name="Description">توضیحات</string>
    <string name="state">وضعیت</string>
    <string name="Home">صفحه اصلی</string>
    <string name="LetsNotThrowaWayTheFuture">آینده را دور نریزیم</string>
    <string name="ScoresDescription">شرح امتیازات</string>
    <string name="HeyWhatsPhoneNumber">سلام، شماره تلفن همراه شما چند است؟</string>
    <string name="EnterPhoneNumber">"جهت دریافت کد امنیتی \n شماره موبایل خود را در زیر وارد نمایید"</string>
    <string name="GetCode">دریافت کد</string>
    <string name="VerifyAccount">تایید حساب کاربری</string>
    <string name="VerifyCode">"لطفا 6 رقم کد فعال سازی  \n را وارد نمایید"</string>
    <string name="ElapsedTimeGetSMS">زمان باقی مانده\n جهت دریافت پیامک</string>
    <string name="ReTryGetSMS">دریافت مجدد\n پیامک</string>
    <string name="LogIn">ورود به سامانه</string>
    <string name="SignUp">ثبت نام در سامانه</string>
    <string name="OrderNumber">شماره سفارش : </string>
    <string name="EmptyPhoneNumber">شماره موبایل را بصورت صحیح وارد نمایید</string>
    <string name="PleaseWait">درحال برقراری ارتباط ...</string>
    <string name="Ignore">بستن</string>
    <string name="ForgetPassword">آیا رمز ورود خود را فراموش کرده اید؟</string>
    <string name="EditProfile">ویرایش اطلاعات</string>
    <string name="NetworkError">خطا در اتصال به سرور</string>
    <string name="UnitCount">تعداد واحد</string>
    <string name="PersonCount">تعداد نفرات</string>
    <string name="UnitNumber">شماره واحد</string>
    <string name="SendMessage">ارسال پیام</string>
    <string name="PleaseChooseProvince">لطفا ابتدا استان را انتخاب کنید</string>
    <string name="PleaseChooseCity">لطفا ابتدا شهر را انتخاب کنید</string>
    <string name="EmptyFirstName">لطفا نام را وارد کنید</string>
    <string name="EmptyLastName">لطفا نام خانوادگی را وارد کنید</string>
    <string name="GetBanks">دریافت لیست بانکها</string>
    <string name="EmptyAccountNumber">لطفا شماره شبا را وارد کنید</string>
    <string name="ExitAccount">خروج از حساب</string>
    <string name="WazeNavigation">مسیریابی</string>
    <string name="NotFoundLocation">موقعیت شما یافت نشد</string>
    <string name="Game">بازی</string>
    <string name="StartGame">شروع بازی</string>
    <string name="OnlineResponse">نتایج آنلاین</string>
    <string name="OutOfIran">آدرس انتخابی خارج از ایران است</string>
    <string name="EmptyAddress">لطفا آدرس را انتخاب نمایید</string>
    <string name="EmptyPersonCount">لطفا تعداد نفرات را وارد نمایید</string>
    <string name="EmptyPlateNumber">لطفا پلاک ساختمان را وارد نمایید</string>
    <string name="EmptyUnitNumber">لطفا شماره واحد را وارد نمایید</string>
    <string name="EmptyUnitCount">لطفا تعداد واحدها را وارد نمایید</string>
    <string name="TurnOnGps">موقعیت مکانی دستگاه شما خاموش است. تمایل به روشن کردن آن دارید؟</string>
    <string name="PowerOff">Powered By</string>
    <string name="BounceNegra">NGRA</string>
    <string name="About">درباره تولید کننده</string>
    <string name="NgraSite">آدرس سایت : http://www.ngra.ir</string>
    <string name="Tel">تلفن تماس : 02691009001</string>
    <string name="ML_TurnOnLocation">روشن شود</string>
    <string name="ML_TurnOffLocation">خاموش بماند</string>
    <string name="DownloadingFile">بارگیری فایل ...</string>
    <string name="FileDownloaded">پایان بارگیری فایل</string>
    <string name="InstallApp">نصب بروزرسانی برنامه</string>
    <string name="ShebaNumber">مثال : IR012345678901234567890123 (تعداد 26 کاراکتر)</string>
    <string name="TicketDetail">مکالمات</string>
    <string name="MessageText">متن</string>
    <string name="CloseTicket">اتمام مکالمه</string>
    <string name="EmptySubject">لطفا موضوع را انتخاب کنید</string>
    <string name="EmptyDescription">لطفا توضیحات را وارد نمایید</string>
    <string name="PlateNumber">پلاک ساختمان</string>
    <string name="NoMessage">موردی جهت نمایش وجود ندارد</string>
    <string name="Somewhat">حدود</string>
    <string name="FromTime">از ساعت</string>
    <string name="ToTime">تا ساعت</string>
    <string name="Time">ساعت</string>
    <string name="EmptyTimeSheet">لطفا تاریخ و زمان را انتخاب نمایید</string>
    <string name="TicketStatusPending">در حال بررسی</string>
    <string name="TicketStatusNew">جدید</string>
    <string name="TicketStatusWaiting">در انتظار پاسخ</string>
    <string name="TicketStatusAnswered">پاسخ داده شده</string>
    <string name="TicketStatusReferred">ارجاعی</string>
    <string name="TicketStatusSolved">حل شده</string>
    <string name="TicketStatusClosed">بسته شده</string>
    <string name="TicketStatusArchived">بایگانی</string>
    <string name="WaitForAccept">در انتظار تایید</string>
    <string name="ChooseDay">ابتدا روز را انتخاب نمایید</string>
    <string name="RequestIsCanceled">درخواست لغو شد</string>
    <string name="WhereAreYou">شما کجا هستید؟</string>
    <string name="EnterYourAddress">آدرس مقصد خودرا وارد کنید</string>
    <string name="DefaultCity">کرج</string>
    <string name="LoadMore">موارد بیشتر</string>
    <string name="FindYourLocationBooth">درحال یافتن موقعیت شما\n برای پیدا کردن نزدیکترین غرفه...</string>
    <string name="FindYourLocation">درحال یافتن موقعیت شما...</string>
    <string name="BoothListIsEmpty">غرفه ای یافت نشد</string>
    <string name="TheLowestHarvest">کمترین مبلغ جهت برداشت</string>
    <string name="YourWalletBalance">موجودی کیف پول شما</string>
    <string name="TheHighestAmountThatCanBeWithdrawn">بیشترین مبلغ قابل برداشت</string>
    <string name="Clearing">تسویه</string>
    <string name="WithdrawalAmount">مبلغ برداشت</string>
    <string name="validationAmountIsLowest">مبلغ وارد شده کمتر از حداقل میزان برداشت است</string>
    <string name="ML_PhoneNumber">PhoneNumber</string>
    <string name="ML_Password">Password</string>
    <string name="ML_Type">Type</string>
</resources>