<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="code"
            type="com.example.wms.viewmodels.user.profile.VM_FragmentProfileCode" />

        <variable
            name="vm_code"
            type="com.example.wms.viewmodels.user.profile.VM_ProfileCode" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_50sdp"
        android:paddingRight="@dimen/_50sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:gravity="center"
            android:textColor="@color/mlTextRegisterCode"
            android:text="@string/RegisterCode"
            />


        <EditText
            android:id="@+id/editBuildingRenovationCode"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edit_normal_background"
            android:hint="@string/RegisterPersonCodeNew"
            android:inputType="textPersonName"
            android:padding="@dimen/_2sdp"
            android:textColor="@color/mlBlack"
            android:textSize="@dimen/_12sdp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_9sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:textColor="@color/mlWhite"
            android:text="@string/RegisterKM"
            android:background="@drawable/text_register_message"
            />


        <Button
            android:id="@+id/btnSendCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/save_info_button"
            android:text="@string/Save"
            android:textColor="@color/mlWhite"
            android:textSize="@dimen/_13sdp" />



    </LinearLayout>


    </ScrollView>

</layout>

